src/components/list/list.scss
@import '../../style/variables';

@import "@limetech/mdc-list/mdc-list";

@import '../checkbox/checkbox.scss';

@import './radio-button/radio-button.scss';

/**
 * @prop --icon-background-color: Color to use for icon background.
 */

:host {
    display: block;
}

:host([hidden]) {
    display: none;
}

.mdc-list {
    &.selectable .mdc-list-item:not(.mdc-list-item--disabled) {
        cursor: pointer;
    }

    &.mdc-list--avatar-list {
        position: relative;

        limel-icon {
            background-color: var(--icon-background-color, var(--lime-light-grey));
            color: white;
        }

        hr.mdc-list-divider {
            position: absolute;
            bottom: 0;

            &.mdc-list-divider--inset {
                --icon-width: #{pxToRem(41)};
                --icon-right-padding: #{pxToRem(16)};
                --list-right-padding: #{pxToRem(16)};
                margin-left: calc(var(--icon-width) + var(--icon-right-padding));
                width: calc(100% - var(--icon-width) - var(--icon-right-padding) - var(--list-right-padding));

                &.x-small {
                    --icon-width: #{pxToRem(23)};
                }

                &.small {
                    --icon-width: #{pxToRem(30)};
                }

                &.medium {
                    --icon-width: #{pxToRem(40)};
                }

                &.large {
                    --icon-width: #{pxToRem(46)};
                }
            }
        }

        .mdc-list-item:last-child hr.mdc-list-divider {
            display: none;
        }
    }

    &.mdc-list--two-line.list--compact {
        .mdc-list-item {
            height: 4rem;

            .mdc-list-item__text {
                margin-top: pxToRem(-4);
            }
        }
    }
}

